removing white space and fixing header height no slider mode

--- a/code/less/template.less
+++ b/code/less/template.less
@@ -270,7 +270,7 @@ code{
 						width: 80%;
 						> .active > a{
 							border-top-color: @color_four;
-						} 
+						}
 					}
 				}
 			}
@@ -640,39 +640,39 @@ code{
 .table-bordered{
 	.border-radius(0);
 }
-.table-bordered caption+thead tr:first-child th:first-child, 
-.table-bordered caption+tbody tr:first-child td:first-child, 
-.table-bordered colgroup+thead tr:first-child th:first-child, 
+.table-bordered caption+thead tr:first-child th:first-child,
+.table-bordered caption+tbody tr:first-child td:first-child,
+.table-bordered colgroup+thead tr:first-child th:first-child,
 .table-bordered colgroup+tbody tr:first-child td:first-child{
 	.border-radius(0);
 }
-.table-bordered caption+thead tr:first-child th:last-child, 
-.table-bordered caption+tbody tr:first-child td:last-child, 
-.table-bordered colgroup+thead tr:first-child th:last-child, 
+.table-bordered caption+thead tr:first-child th:last-child,
+.table-bordered caption+tbody tr:first-child td:last-child,
+.table-bordered colgroup+thead tr:first-child th:last-child,
 .table-bordered colgroup+tbody tr:first-child td:last-child{
 	.border-radius(0);
 }
-.table-bordered thead:first-child tr:first-child>th:first-child, 
-.table-bordered tbody:first-child tr:first-child>td:first-child, 
+.table-bordered thead:first-child tr:first-child>th:first-child,
+.table-bordered tbody:first-child tr:first-child>td:first-child,
 .table-bordered tbody:first-child tr:first-child>th:first-child{
 	.border-radius(0);
 }
-.table-bordered thead:first-child tr:first-child>th:last-child, 
-.table-bordered tbody:first-child tr:first-child>td:last-child, 
+.table-bordered thead:first-child tr:first-child>th:last-child,
+.table-bordered tbody:first-child tr:first-child>td:last-child,
 .table-bordered tbody:first-child tr:first-child>th:last-child{
 	.border-radius(0);
 }
-.table-bordered thead:last-child tr:last-child>th:first-child, 
-.table-bordered tbody:last-child tr:last-child>td:first-child, 
-.table-bordered tbody:last-child tr:last-child>th:first-child, 
-.table-bordered tfoot:last-child tr:last-child>td:first-child, 
+.table-bordered thead:last-child tr:last-child>th:first-child,
+.table-bordered tbody:last-child tr:last-child>td:first-child,
+.table-bordered tbody:last-child tr:last-child>th:first-child,
+.table-bordered tfoot:last-child tr:last-child>td:first-child,
 .table-bordered tfoot:last-child tr:last-child>th:first-child{
 	.border-radius(0);
 }
-.table-bordered thead:last-child tr:last-child>th:last-child, 
-.table-bordered tbody:last-child tr:last-child>td:last-child, 
-.table-bordered tbody:last-child tr:last-child>th:last-child, 
-.table-bordered tfoot:last-child tr:last-child>td:last-child, 
+.table-bordered thead:last-child tr:last-child>th:last-child,
+.table-bordered tbody:last-child tr:last-child>td:last-child,
+.table-bordered tbody:last-child tr:last-child>th:last-child,
+.table-bordered tfoot:last-child tr:last-child>td:last-child,
 .table-bordered tfoot:last-child tr:last-child>th:last-child{
 	.border-radius(0);
 }
@@ -696,7 +696,7 @@ code{
 	input[type="url"],
 	input[type="search"],
 	input[type="tel"],
-	input[type="color"], 
+	input[type="color"],
 	.uneditable-input{
 		border-color: @color_four;
 	}
@@ -745,7 +745,7 @@ code{
 		> [class*="span"]{
 			margin-bottom: 0;
 			@media (max-width: 767px) {
-				width: auto;		
+				width: auto;
 			}
 		}
 	}
@@ -957,9 +957,11 @@ code{
 	position: relative;
 	color: @color_four;
 	margin-bottom: 0;
-	min-height: 500px;
  	z-index: 1;
 
+	&.header-min-height{
+		min-height: 500px;
+	}
 	&.headerBg{
 		h1,h2,h3,h4,h5,h6{
 			color: @white;
@@ -1367,7 +1369,7 @@ code{
 									}
 									.caret{
 										border-top-color: @textColor;
-									}	
+									}
 								}
 							}
 						}
@@ -2014,16 +2016,16 @@ div {
 .is_internet.v_8{
 	.navbar-inverse{
 		.navbar-inner{
-			filter : 
-			progid:DXImageTransform.Microsoft.gradient(startColorstr='#b3000000', 
+			filter :
+			progid:DXImageTransform.Microsoft.gradient(startColorstr='#b3000000',
 			endColorstr='#b3000000', GradientType=0)
 		}
 	}
 	.wrappToolbar .navbar-inner{
 		filter: none;
 		.toolbar-container{
-			filter : 
-			progid:DXImageTransform.Microsoft.gradient(startColorstr='#b3000000', 
+			filter :
+			progid:DXImageTransform.Microsoft.gradient(startColorstr='#b3000000',
 			endColorstr='#b3000000', GradientType=0)
 		}
 	}
